--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "description": "A fully fledged blog application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   }
 }
