--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A fully fledged blog application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
     "dev": "nodemon index.js"
   }
 }
